styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Nunito Sans', sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  outline: none;
}

h1,h2,h3,h4,h5,h6,p {
  margin: 0;
}

* {
  box-sizing: border-box;
  user-select: none;
}

.swiper__fixed .swiper {
  z-index: -1;
}



@media screen and (min-width: 1px) {
  .container {
    padding: 0 20px;
    margin: 0 auto;
  }
  .hero .carousel-slider {
    padding-bottom: 35px !important;
  }
  .hero .control-dots {
    bottom: -15px !important;
  }
  .hero .dot {
    width: 10px !important;
    height: 10px !important;
    border: 2px solid #000;
    background: transparent !important;
    opacity: 1 !important;
    margin-right: 13px !important;
    box-shadow: none !important;
  }
  .hero .dot:last-of-type {
    margin-right: 0 !important;
  }
  .hero .dot.selected{
    background-color: #000 !important;
  }
  .desktop {
    display: none;
  }
  .mobile {
    display: block;
  }
  .react-player {
    height: 290px !important;
  }
  .react__player__long {
    height: 250px !important;
    object-fit: cover;
  }
  .react-player video,
  .react__player__long video{
    object-fit: cover;
  }
}

@media screen and (min-width: 321px) {
  .container {
    padding: 0 30px;
    margin: 0 auto;
  }
}

@media screen and (min-width: 767px) {
  .container {
    padding: 0 35px;
    margin: 0 auto;
  }
  .hero .carousel-slider {
    padding-bottom: 70px !important;
  }
  .hero .dot {
    width: 14px !important;
    height: 14px !important;
    margin-right: 32px !important;
  }
  .react-player {
    height: 360px !important;
  }
  .react__player__long {
    height: 770px !important;
  }
}

@media screen and (min-width: 1023px) {
  .container {
    padding: 0 16%;
    margin: 0 auto;
  }
  .hero .dot {
    width: 16px !important;
    height: 16px !important;
  }
  .react-player {
    height: 475px !important;
  }
  .react__player__long {
    height: 895px !important;
  }
}

@media screen and (min-width: 1281px) {
  .container {
    padding: 0;
    margin: 0 auto;
    width: 1264px;
  }

  .hero .control-dots {
    bottom: 50px !important;
  }
  .hero .carousel-slider {
    padding-bottom: 0 !important;
  }
  .mobile {
    display: none;
  }
  .desktop {
    display: block;
  }
  .react-player {
    height: 625px !important;
  }
  .react__player__long {
    height: 1105px !important;
  }
}

@media screen and (min-width: 1px) {
  .extended .swiper {
    display: none;
  }
  .products .swiper {
    width: 100%;
    height: 100%;
    display: block;
    padding: 0 0 140px 0;
  }
  .centered .swiper {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
  .centered .mySwiper {
    display: none;
  }
  .products .swiper-slide {
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    width: 100%;
  }
  .products .swiper-button-next, .products .swiper-button-prev {
    display: none;
  }
  .products .swiper-pagination {
    bottom: 100px !important;
  }
  .products .swiper-pagination-bullet {
    width: 10px !important;
    height: 10px !important;
    border: 2px solid #000;
    background: transparent !important;
    opacity: 1 !important;
    margin-right: 32px !important;
  }
  .products .swiper-pagination-bullet:last-of-type {
    margin-right: 0 !important;
  }
  .products .swiper-pagination-bullet.swiper-pagination-bullet-active{
    background-color: #000 !important;
  }
  .margin__minus {
    margin-top: -75px;
  }
}

@media screen and (min-width: 767px) {
  .extended .swiper{
    width: 100%;
    height: 100%;
    display: block;
    padding: 90px 0 140px 0;
  }

  .centered {
    height: 70vh;
  }

  .centered .swiper {
    width: 100%;
    height: 100%;
  }

  .centered div:first-child {
    height: 70vh;
    padding-bottom: 40px;
  }

  .extended .swiper-slide {
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
    width: 100%;
  }

  .extended .swiper-button-next, .extended .swiper-button-prev {
    display: none;
  }

  .extended .swiper-pagination {
    bottom: 100px !important;
  }

  .centered .swiper-pagination {
    bottom: -5px !important;
  }

  .extended .swiper-pagination-bullet, .centered .swiper-pagination-bullet {
    width: 10px !important;
    height: 10px !important;
    border: 2px solid #000;
    background: transparent !important;
    opacity: 1 !important;
    margin-right: 32px !important;
  }

  .extended .swiper-pagination-bullet:last-of-type {
    margin-right: 0 !important;
  }

  .extended .swiper-pagination-bullet.swiper-pagination-bullet-active,
  .centered .swiper-pagination-bullet.swiper-pagination-bullet-active {
    background-color: #000 !important;
  }

  .centered .swiper img {
    width: 100%;
    height: 100%;
  }

  .centered .mySwiper {
    display: block;
  }
}

@media screen and (min-width: 1181px) {
  .extended .swiper {
    padding: 130px 0 180px 0;
  }

  .products .swiper {
    padding: 0 0 180px 0;
  }

  .extended .swiper-button-next, .extended .swiper-button-prev,
  .products .swiper-button-next, .products .swiper-button-prev,
  .centered .swiper-button-next, .centered .swiper-button-prev {
    display: block;
    color: #000 !important;
    width: 15px !important;
    height: 32px !important;
    transform: translate(0, 20%);
  }

  .extended .swiper-button-next {
    right: 507px !important;
    top: 390px;
    bottom: 130px;
    z-index: 99;
  }

  .products .swiper-button-next {
    right: 507px !important;
    top: 327px;
    bottom: 130px;
    z-index: 99;
  }

  .products.comparing .swiper-button-next,
  .products.comparing .swiper-button-prev{
    top: 959px;
  }

  .extended .swiper-button-prev {
    left: 507px !important;
    top: 390px;
    bottom: 130px;
    z-index: 99;
  }

  .products .swiper-button-prev {
    left: 507px !important;
    top: 327px;
    bottom: 130px;
    z-index: 99;
  }

  .extended .swiper-button-next:after, .extended .swiper-button-prev:after,
  .centered .swiper-button-next:after, .centered .swiper-button-prev:after,
  .products .swiper-button-next:after, .products .swiper-button-prev:after {
    width: 15px !important;
    height: 32px !important;
    font-size: 30px !important;
  }

  .extended .swiper-pagination,
  .products .swiper-pagination {
    bottom: 110px !important;
  }
}

.centered .mySwiper {
  height: 20%;
  box-sizing: border-box;
  padding: 10px 0;
}

.centered .mySwiper .swiper-slide {
  width: 25%;
  height: 100%;
  opacity: 0.4;
}

.centered .mySwiper .swiper-slide-thumb-active {
  opacity: 1;
}

.loader {
  width: 100%;
  height: 100%;
  background: #eee;
  background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
  animation: 1.5s shine linear infinite;
  background-size: 200% 100%;
  position: absolute;
  top: 0;
  left: 0;
}

@keyframes shine {
  to {
    background-position-x: -200%;
  }
}

.loader__svg {
  fill: #eee;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  object-fit: contain;
  height: 90%;
  animation: 1s svgShine linear infinite;
}

@keyframes svgShine {
  0% {
    opacity: .3;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: .3;
  }
}

.loader__circle {
  border: 3px solid #ffffff;
  border-right-color: #18181B;
  border-radius: 50%;
  animation: rotate 1s infinite linear;
}

@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

.react-calendar {
  width: 100% !important;
}

.react-calendar {
  border: 1px solid #D4D4D8 !important;
  padding: 35px;
}

.react-calendar__tile,
.react-calendar__navigation__label__labelText,
.react-calendar__navigation__arrow {
  color: #000;
}

.react-calendar__tile--now {
  background: transparent !important;
  clip-path: circle(40%);
}

.react-calendar__month-view__days__day--weekend {
  color: #000 !important;
}

.react-calendar__month-view__days__day--neighboringMonth {
  visibility: hidden;
}

.react-calendar__month-view__weekdays__weekday abbr {
  text-decoration: none !important;
}

.react-calendar__tile--active {
  background: #000 !important;
  clip-path: circle(40%);
}

.react-calendar__tile--active abbr {
  color: #fff;
}

.react-calendar__tile:hover {
  clip-path: circle(40%);
}

.react-calendar__navigation__prev2-button,
.react-calendar__navigation__next2-button {
  display: none;
}

.react-calendar__tile:disabled {
  background: #fff !important;
  opacity: .5;
}

.react-calendar__navigation button:disabled {
  background: #fff !important;
}

